src/rule/y.output
Useless nonterminals

   array_init
   array_init_list
   expression_list


Terminals which are not used

   UNSIGNED
   CONST
   SIGNED
   STRUCT
   UNION
   ENUM
   VOLATILE
   GOTO
   TYPEDEF
   AUTO
   REGISTER
   EXTERN
   STATIC
   SIZEOF
   STRING
   SINGLE_COMMENT
   COMMENTS


Useless rules

  109 var_decl: array_identifier ASSIGN array_init

  110 array_init: LEFT_BRACE array_init_list RIGHT_BRACE
  111           | LEFT_BRACE expression_list RIGHT_BRACE

  112 array_init_list: array_init_list COMMA array_init
  113                | array_init

  114 expression_list: expression_list COMMA expression


Rules never reduced

   81 loopBody: SEMI


State 82 conflicts: 12 shift/reduce
State 84 conflicts: 13 shift/reduce
State 125 conflicts: 13 shift/reduce
State 126 conflicts: 13 shift/reduce
State 127 conflicts: 13 shift/reduce
State 128 conflicts: 13 shift/reduce
State 129 conflicts: 13 shift/reduce
State 130 conflicts: 12 shift/reduce
State 131 conflicts: 13 shift/reduce
State 132 conflicts: 13 shift/reduce
State 133 conflicts: 13 shift/reduce
State 134 conflicts: 13 shift/reduce
State 135 conflicts: 13 shift/reduce
State 136 conflicts: 13 shift/reduce
State 137 conflicts: 13 shift/reduce
State 138 conflicts: 13 shift/reduce
State 155 conflicts: 1 shift/reduce
State 158 conflicts: 22 reduce/reduce


Grammar

    0 $accept: program $end

    1 program: declaration_list

    2 declaration_list: declaration_list declaration
    3                 | declaration

    4 var_declaration: type var_declaration_list SEMI

    5 type: INT
    6     | DOUBLE
    7     | FLOAT
    8     | VOID
    9     | LONG
   10     | SHORT
   11     | CHAR

   12 var_declaration_list: var_declaration_list COMMA var_decl
   13                     | var_decl

   14 var_decl: IDENTIFIER
   15         | IDENTIFIER ASSIGN expression
   16         | array_identifier

   17 array_identifier: IDENTIFIER LEFT_BRACKET INTEGER RIGHT_BRACKET

   18 expression: expression PLUS expression
   19           | expression MINUS expression
   20           | expression MUL expression
   21           | expression DIV expression
   22           | expression MOD expression
   23           | LEFT_PAREN expression RIGHT_PAREN
   24           | expression LESS expression
   25           | expression LESS_EQUAL expression
   26           | expression GREATER expression
   27           | expression GREATER_EQUAL expression
   28           | expression AND_AND expression
   29           | expression OR_OR expression
   30           | NOT expression
   31           | expression EQUAL expression
   32           | expression NOT_EQUAL expression
   33           | MINUS expression
   34           | var ASSIGN expression
   35           | PLUS_PLUS var
   36           | var PLUS_PLUS
   37           | MINUS_MINUS var
   38           | var MINUS_MINUS
   39           | var
   40           | call
   41           | constant

   42 var: IDENTIFIER
   43    | array_identifier

   44 constant: INTEGER
   45         | DOUBLE_NUMBER
   46         | CHARACTER

   47 call: IDENTIFIER LEFT_PAREN args RIGHT_PAREN

   48 args: args_list
   49     | /* empty */

   50 args_list: args_list COMMA expression
   51          | expression

   52 declaration: function_declaration
   53            | var_declaration

   54 function_declaration: function_declaration_only
   55                     | function_definition

   56 function_declaration_only: function_decl SEMI

   57 function_definition: function_decl function_body

   58 function_decl: type IDENTIFIER LEFT_PAREN function_args RIGHT_PAREN

   59 function_args: function_arg_list
   60              | /* empty */

   61 function_arg_list: function_arg
   62                  | function_arg COMMA function_arg_list

   63 function_arg: type IDENTIFIER

   64 function_body: LEFT_BRACE function_statements RIGHT_BRACE

   65 function_statements: statements return_statement

   66 return_statement: RETURN IDENTIFIER SEMI
   67                 | /* empty */

   68 statements: statement statements
   69           | /* empty */

   70 statement: iterationStatement
   71          | selectionStatement
   72          | expressionStatement
   73          | jumpStatement

   74 expressionStatement: expression SEMI
   75                    | SEMI

   76 iterationStatement: WHILE LEFT_PAREN expression RIGHT_PAREN loopBody
   77                   | DO compoundStatement WHILE LEFT_PAREN expression RIGHT_PAREN SEMI
   78                   | FOR LEFT_PAREN forCondition RIGHT_PAREN loopBody

   79 loopBody: statement
   80         | compoundStatement
   81         | SEMI

   82 compoundStatement: LEFT_BRACE statements RIGHT_BRACE

   83 forCondition: forInitList SEMI forExpression SEMI incrementExpressionList

   84 forExpression: expression
   85              | /* empty */

   86 incrementExpressionList: expressions
   87                        | /* empty */

   88 expressions: expression COMMA expressions
   89            | expression

   90 forInitList: /* empty */
   91            | forDeclaration
   92            | expressions

   93 forDeclaration: type var_declaration_list

   94 jumpStatement: CONTINUE SEMI
   95              | BREAK SEMI

   96 selectionStatement: ifStatement
   97                   | switchStatement

   98 ifStatement: IF LEFT_PAREN expression RIGHT_PAREN ifBody
   99            | IF LEFT_PAREN expression RIGHT_PAREN ifBody ELSE elseBody

  100 ifBody: compoundStatement
  101       | statement

  102 elseBody: compoundStatement
  103         | statement

  104 switchStatement: SWITCH LEFT_PAREN expression RIGHT_PAREN LEFT_BRACE labeledStatementList RIGHT_BRACE

  105 labeledStatementList: labeledStatement labeledStatementList
  106                     | /* empty */

  107 labeledStatement: CASE constant COLON statements
  108                 | DEFAULT COLON statements


Terminals, with rules where they appear

$end (0) 0
error (256)
INT (258) 5
LONG (259) 9
FLOAT (260) 7
SHORT (261) 10
VOID (262) 8
DOUBLE (263) 6
CHAR (264) 11
UNSIGNED (265)
CONST (266)
SIGNED (267)
STRUCT (268)
UNION (269)
ENUM (270)
VOLATILE (271)
IF (272) 98 99
ELSE (273) 99
SWITCH (274) 104
GOTO (275)
CASE (276) 107
DO (277) 77
WHILE (278) 76 77
FOR (279) 78
CONTINUE (280) 94
BREAK (281) 95
RETURN (282) 66
DEFAULT (283) 108
TYPEDEF (284)
AUTO (285)
REGISTER (286)
EXTERN (287)
STATIC (288)
SIZEOF (289)
IDENTIFIER (290) 14 15 17 42 47 58 63 66
INTEGER (291) 17 44
DOUBLE_NUMBER (292) 45
CHARACTER (293) 46
STRING (294)
SINGLE_COMMENT (295)
COMMENTS (296)
COLON (297) 107 108
LEFT_PAREN (298) 23 47 58 76 77 78 98 99 104
RIGHT_PAREN (299) 23 47 58 76 77 78 98 99 104
LEFT_BRACKET (300) 17
RIGHT_BRACKET (301) 17
LEFT_BRACE (302) 64 82 104
RIGHT_BRACE (303) 64 82 104
LESS (304) 24
LESS_EQUAL (305) 25
GREATER (306) 26
GREATER_EQUAL (307) 27
PLUS (308) 18
PLUS_PLUS (309) 35 36
MINUS (310) 19 33
MINUS_MINUS (311) 37 38
DIV (312) 21
MOD (313) 22
MUL (314) 20
AND_AND (315) 28
OR_OR (316) 29
EQUAL (317) 31
NOT_EQUAL (318) 32
NOT (319) 30
COMMA (320) 12 50 62 88
SEMI (321) 4 56 66 74 75 77 81 83 94 95
ASSIGN (322) 15 34
NEG (323)


Nonterminals, with rules where they appear

$accept (69)
    on left: 0
program (70)
    on left: 1, on right: 0
declaration_list (71)
    on left: 2 3, on right: 1 2
var_declaration (72)
    on left: 4, on right: 53
type (73)
    on left: 5 6 7 8 9 10 11, on right: 4 58 63 93
var_declaration_list (74)
    on left: 12 13, on right: 4 12 93
var_decl (75)
    on left: 14 15 16, on right: 12 13
array_identifier (76)
    on left: 17, on right: 16 43
expression (77)
    on left: 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35
    36 37 38 39 40 41, on right: 15 18 19 20 21 22 23 24 25 26 27 28
    29 30 31 32 33 34 50 51 74 76 77 84 88 89 98 99 104
var (78)
    on left: 42 43, on right: 34 35 36 37 38 39
constant (79)
    on left: 44 45 46, on right: 41 107
call (80)
    on left: 47, on right: 40
args (81)
    on left: 48 49, on right: 47
args_list (82)
    on left: 50 51, on right: 48 50
declaration (83)
    on left: 52 53, on right: 2 3
function_declaration (84)
    on left: 54 55, on right: 52
function_declaration_only (85)
    on left: 56, on right: 54
function_definition (86)
    on left: 57, on right: 55
function_decl (87)
    on left: 58, on right: 56 57
function_args (88)
    on left: 59 60, on right: 58
function_arg_list (89)
    on left: 61 62, on right: 59 62
function_arg (90)
    on left: 63, on right: 61 62
function_body (91)
    on left: 64, on right: 57
function_statements (92)
    on left: 65, on right: 64
return_statement (93)
    on left: 66 67, on right: 65
statements (94)
    on left: 68 69, on right: 65 68 82 107 108
statement (95)
    on left: 70 71 72 73, on right: 68 79 101 103
expressionStatement (96)
    on left: 74 75, on right: 72
iterationStatement (97)
    on left: 76 77 78, on right: 70
loopBody (98)
    on left: 79 80 81, on right: 76 78
compoundStatement (99)
    on left: 82, on right: 77 80 100 102
forCondition (100)
    on left: 83, on right: 78
forExpression (101)
    on left: 84 85, on right: 83
incrementExpressionList (102)
    on left: 86 87, on right: 83
expressions (103)
    on left: 88 89, on right: 86 88 92
forInitList (104)
    on left: 90 91 92, on right: 83
forDeclaration (105)
    on left: 93, on right: 91
jumpStatement (106)
    on left: 94 95, on right: 73
selectionStatement (107)
    on left: 96 97, on right: 71
ifStatement (108)
    on left: 98 99, on right: 96
ifBody (109)
    on left: 100 101, on right: 98 99
elseBody (110)
    on left: 102 103, on right: 99
switchStatement (111)
    on left: 104, on right: 97
labeledStatementList (112)
    on left: 105 106, on right: 104 105
labeledStatement (113)
    on left: 107 108, on right: 105


state 0

    0 $accept: . program $end

    INT     shift, and go to state 1
    LONG    shift, and go to state 2
    FLOAT   shift, and go to state 3
    SHORT   shift, and go to state 4
    VOID    shift, and go to state 5
    DOUBLE  shift, and go to state 6
    CHAR    shift, and go to state 7

    program                    go to state 8
    declaration_list           go to state 9
    var_declaration            go to state 10
    type                       go to state 11
    declaration                go to state 12
    function_declaration       go to state 13
    function_declaration_only  go to state 14
    function_definition        go to state 15
    function_decl              go to state 16


state 1

    5 type: INT .

    $default  reduce using rule 5 (type)


state 2

    9 type: LONG .

    $default  reduce using rule 9 (type)


state 3

    7 type: FLOAT .

    $default  reduce using rule 7 (type)


state 4

   10 type: SHORT .

    $default  reduce using rule 10 (type)


state 5

    8 type: VOID .

    $default  reduce using rule 8 (type)


state 6

    6 type: DOUBLE .

    $default  reduce using rule 6 (type)


state 7

   11 type: CHAR .

    $default  reduce using rule 11 (type)


state 8

    0 $accept: program . $end

    $end  shift, and go to state 17


state 9

    1 program: declaration_list .
    2 declaration_list: declaration_list . declaration

    INT     shift, and go to state 1
    LONG    shift, and go to state 2
    FLOAT   shift, and go to state 3
    SHORT   shift, and go to state 4
    VOID    shift, and go to state 5
    DOUBLE  shift, and go to state 6
    CHAR    shift, and go to state 7

    $default  reduce using rule 1 (program)

    var_declaration            go to state 10
    type                       go to state 11
    declaration                go to state 18
    function_declaration       go to state 13
    function_declaration_only  go to state 14
    function_definition        go to state 15
    function_decl              go to state 16


state 10

   53 declaration: var_declaration .

    $default  reduce using rule 53 (declaration)


state 11

    4 var_declaration: type . var_declaration_list SEMI
   58 function_decl: type . IDENTIFIER LEFT_PAREN function_args RIGHT_PAREN

    IDENTIFIER  shift, and go to state 19

    var_declaration_list  go to state 20
    var_decl              go to state 21
    array_identifier      go to state 22


state 12

    3 declaration_list: declaration .

    $default  reduce using rule 3 (declaration_list)


state 13

   52 declaration: function_declaration .

    $default  reduce using rule 52 (declaration)


state 14

   54 function_declaration: function_declaration_only .

    $default  reduce using rule 54 (function_declaration)


state 15

   55 function_declaration: function_definition .

    $default  reduce using rule 55 (function_declaration)


state 16

   56 function_declaration_only: function_decl . SEMI
   57 function_definition: function_decl . function_body

    LEFT_BRACE  shift, and go to state 23
    SEMI        shift, and go to state 24

    function_body  go to state 25


state 17

    0 $accept: program $end .

    $default  accept


state 18

    2 declaration_list: declaration_list declaration .

    $default  reduce using rule 2 (declaration_list)


state 19

   14 var_decl: IDENTIFIER .
   15         | IDENTIFIER . ASSIGN expression
   17 array_identifier: IDENTIFIER . LEFT_BRACKET INTEGER RIGHT_BRACKET
   58 function_decl: type IDENTIFIER . LEFT_PAREN function_args RIGHT_PAREN

    LEFT_PAREN    shift, and go to state 26
    LEFT_BRACKET  shift, and go to state 27
    ASSIGN        shift, and go to state 28

    $default  reduce using rule 14 (var_decl)


state 20

    4 var_declaration: type var_declaration_list . SEMI
   12 var_declaration_list: var_declaration_list . COMMA var_decl

    COMMA  shift, and go to state 29
    SEMI   shift, and go to state 30


state 21

   13 var_declaration_list: var_decl .

    $default  reduce using rule 13 (var_declaration_list)


state 22

   16 var_decl: array_identifier .

    $default  reduce using rule 16 (var_decl)


state 23

   64 function_body: LEFT_BRACE . function_statements RIGHT_BRACE

    IF             shift, and go to state 31
    SWITCH         shift, and go to state 32
    DO             shift, and go to state 33
    WHILE          shift, and go to state 34
    FOR            shift, and go to state 35
    CONTINUE       shift, and go to state 36
    BREAK          shift, and go to state 37
    IDENTIFIER     shift, and go to state 38
    INTEGER        shift, and go to state 39
    DOUBLE_NUMBER  shift, and go to state 40
    CHARACTER      shift, and go to state 41
    LEFT_PAREN     shift, and go to state 42
    PLUS_PLUS      shift, and go to state 43
    MINUS          shift, and go to state 44
    MINUS_MINUS    shift, and go to state 45
    NOT            shift, and go to state 46
    SEMI           shift, and go to state 47

    $default  reduce using rule 69 (statements)

    array_identifier     go to state 48
    expression           go to state 49
    var                  go to state 50
    constant             go to state 51
    call                 go to state 52
    function_statements  go to state 53
    statements           go to state 54
    statement            go to state 55
    expressionStatement  go to state 56
    iterationStatement   go to state 57
    jumpStatement        go to state 58
    selectionStatement   go to state 59
    ifStatement          go to state 60
    switchStatement      go to state 61


state 24

   56 function_declaration_only: function_decl SEMI .

    $default  reduce using rule 56 (function_declaration_only)


state 25

   57 function_definition: function_decl function_body .

    $default  reduce using rule 57 (function_definition)


state 26

   58 function_decl: type IDENTIFIER LEFT_PAREN . function_args RIGHT_PAREN

    INT     shift, and go to state 1
    LONG    shift, and go to state 2
    FLOAT   shift, and go to state 3
    SHORT   shift, and go to state 4
    VOID    shift, and go to state 5
    DOUBLE  shift, and go to state 6
    CHAR    shift, and go to state 7

    $default  reduce using rule 60 (function_args)

    type               go to state 62
    function_args      go to state 63
    function_arg_list  go to state 64
    function_arg       go to state 65


state 27

   17 array_identifier: IDENTIFIER LEFT_BRACKET . INTEGER RIGHT_BRACKET

    INTEGER  shift, and go to state 66


state 28

   15 var_decl: IDENTIFIER ASSIGN . expression

    IDENTIFIER     shift, and go to state 38
    INTEGER        shift, and go to state 39
    DOUBLE_NUMBER  shift, and go to state 40
    CHARACTER      shift, and go to state 41
    LEFT_PAREN     shift, and go to state 42
    PLUS_PLUS      shift, and go to state 43
    MINUS          shift, and go to state 44
    MINUS_MINUS    shift, and go to state 45
    NOT            shift, and go to state 46

    array_identifier  go to state 48
    expression        go to state 67
    var               go to state 50
    constant          go to state 51
    call              go to state 52


state 29

   12 var_declaration_list: var_declaration_list COMMA . var_decl

    IDENTIFIER  shift, and go to state 68

    var_decl          go to state 69
    array_identifier  go to state 22


state 30

    4 var_declaration: type var_declaration_list SEMI .

    $default  reduce using rule 4 (var_declaration)


state 31

   98 ifStatement: IF . LEFT_PAREN expression RIGHT_PAREN ifBody
   99            | IF . LEFT_PAREN expression RIGHT_PAREN ifBody ELSE elseBody

    LEFT_PAREN  shift, and go to state 70


state 32

  104 switchStatement: SWITCH . LEFT_PAREN expression RIGHT_PAREN LEFT_BRACE labeledStatementList RIGHT_BRACE

    LEFT_PAREN  shift, and go to state 71


state 33

   77 iterationStatement: DO . compoundStatement WHILE LEFT_PAREN expression RIGHT_PAREN SEMI

    LEFT_BRACE  shift, and go to state 72

    compoundStatement  go to state 73


state 34

   76 iterationStatement: WHILE . LEFT_PAREN expression RIGHT_PAREN loopBody

    LEFT_PAREN  shift, and go to state 74


state 35

   78 iterationStatement: FOR . LEFT_PAREN forCondition RIGHT_PAREN loopBody

    LEFT_PAREN  shift, and go to state 75


state 36

   94 jumpStatement: CONTINUE . SEMI

    SEMI  shift, and go to state 76


state 37

   95 jumpStatement: BREAK . SEMI

    SEMI  shift, and go to state 77


state 38

   17 array_identifier: IDENTIFIER . LEFT_BRACKET INTEGER RIGHT_BRACKET
   42 var: IDENTIFIER .
   47 call: IDENTIFIER . LEFT_PAREN args RIGHT_PAREN

    LEFT_PAREN    shift, and go to state 78
    LEFT_BRACKET  shift, and go to state 27

    $default  reduce using rule 42 (var)


state 39

   44 constant: INTEGER .

    $default  reduce using rule 44 (constant)


state 40

   45 constant: DOUBLE_NUMBER .

    $default  reduce using rule 45 (constant)


state 41

   46 constant: CHARACTER .

    $default  reduce using rule 46 (constant)


state 42

   23 expression: LEFT_PAREN . expression RIGHT_PAREN

    IDENTIFIER     shift, and go to state 38
    INTEGER        shift, and go to state 39
    DOUBLE_NUMBER  shift, and go to state 40
    CHARACTER      shift, and go to state 41
    LEFT_PAREN     shift, and go to state 42
    PLUS_PLUS      shift, and go to state 43
    MINUS          shift, and go to state 44
    MINUS_MINUS    shift, and go to state 45
    NOT            shift, and go to state 46

    array_identifier  go to state 48
    expression        go to state 79
    var               go to state 50
    constant          go to state 51
    call              go to state 52


state 43

   35 expression: PLUS_PLUS . var

    IDENTIFIER  shift, and go to state 80

    array_identifier  go to state 48
    var               go to state 81


state 44

   33 expression: MINUS . expression

    IDENTIFIER     shift, and go to state 38
    INTEGER        shift, and go to state 39
    DOUBLE_NUMBER  shift, and go to state 40
    CHARACTER      shift, and go to state 41
    LEFT_PAREN     shift, and go to state 42
    PLUS_PLUS      shift, and go to state 43
    MINUS          shift, and go to state 44
    MINUS_MINUS    shift, and go to state 45
    NOT            shift, and go to state 46

    array_identifier  go to state 48
    expression        go to state 82
    var               go to state 50
    constant          go to state 51
    call              go to state 52


state 45

   37 expression: MINUS_MINUS . var

    IDENTIFIER  shift, and go to state 80

    array_identifier  go to state 48
    var               go to state 83


state 46

   30 expression: NOT . expression

    IDENTIFIER     shift, and go to state 38
    INTEGER        shift, and go to state 39
    DOUBLE_NUMBER  shift, and go to state 40
    CHARACTER      shift, and go to state 41
    LEFT_PAREN     shift, and go to state 42
    PLUS_PLUS      shift, and go to state 43
    MINUS          shift, and go to state 44
    MINUS_MINUS    shift, and go to state 45
    NOT            shift, and go to state 46

    array_identifier  go to state 48
    expression        go to state 84
    var               go to state 50
    constant          go to state 51
    call              go to state 52


state 47

   75 expressionStatement: SEMI .

    $default  reduce using rule 75 (expressionStatement)


state 48

   43 var: array_identifier .

    $default  reduce using rule 43 (var)


state 49

   18 expression: expression . PLUS expression
   19           | expression . MINUS expression
   20           | expression . MUL expression
   21           | expression . DIV expression
   22           | expression . MOD expression
   24           | expression . LESS expression
   25           | expression . LESS_EQUAL expression
   26           | expression . GREATER expression
   27           | expression . GREATER_EQUAL expression
   28           | expression . AND_AND expression
   29           | expression . OR_OR expression
   31           | expression . EQUAL expression
   32           | expression . NOT_EQUAL expression
   74 expressionStatement: expression . SEMI

    LESS           shift, and go to state 85
    LESS_EQUAL     shift, and go to state 86
    GREATER        shift, and go to state 87
    GREATER_EQUAL  shift, and go to state 88
    PLUS           shift, and go to state 89
    MINUS          shift, and go to state 90
    DIV            shift, and go to state 91
    MOD            shift, and go to state 92
    MUL            shift, and go to state 93
    AND_AND        shift, and go to state 94
    OR_OR          shift, and go to state 95
    EQUAL          shift, and go to state 96
    NOT_EQUAL      shift, and go to state 97
    SEMI           shift, and go to state 98


state 50

   34 expression: var . ASSIGN expression
   36           | var . PLUS_PLUS
   38           | var . MINUS_MINUS
   39           | var .

    PLUS_PLUS    shift, and go to state 99
    MINUS_MINUS  shift, and go to state 100
    ASSIGN       shift, and go to state 101

    $default  reduce using rule 39 (expression)


state 51

   41 expression: constant .

    $default  reduce using rule 41 (expression)


state 52

   40 expression: call .

    $default  reduce using rule 40 (expression)


state 53

   64 function_body: LEFT_BRACE function_statements . RIGHT_BRACE

    RIGHT_BRACE  shift, and go to state 102


state 54

   65 function_statements: statements . return_statement

    RETURN  shift, and go to state 103

    $default  reduce using rule 67 (return_statement)

    return_statement  go to state 104


state 55

   68 statements: statement . statements

    IF             shift, and go to state 31
    SWITCH         shift, and go to state 32
    DO             shift, and go to state 33
    WHILE          shift, and go to state 34
    FOR            shift, and go to state 35
    CONTINUE       shift, and go to state 36
    BREAK          shift, and go to state 37
    IDENTIFIER     shift, and go to state 38
    INTEGER        shift, and go to state 39
    DOUBLE_NUMBER  shift, and go to state 40
    CHARACTER      shift, and go to state 41
    LEFT_PAREN     shift, and go to state 42
    PLUS_PLUS      shift, and go to state 43
    MINUS          shift, and go to state 44
    MINUS_MINUS    shift, and go to state 45
    NOT            shift, and go to state 46
    SEMI           shift, and go to state 47

    $default  reduce using rule 69 (statements)

    array_identifier     go to state 48
    expression           go to state 49
    var                  go to state 50
    constant             go to state 51
    call                 go to state 52
    statements           go to state 105
    statement            go to state 55
    expressionStatement  go to state 56
    iterationStatement   go to state 57
    jumpStatement        go to state 58
    selectionStatement   go to state 59
    ifStatement          go to state 60
    switchStatement      go to state 61


state 56

   72 statement: expressionStatement .

    $default  reduce using rule 72 (statement)


state 57

   70 statement: iterationStatement .

    $default  reduce using rule 70 (statement)


state 58

   73 statement: jumpStatement .

    $default  reduce using rule 73 (statement)


state 59

   71 statement: selectionStatement .

    $default  reduce using rule 71 (statement)


state 60

   96 selectionStatement: ifStatement .

    $default  reduce using rule 96 (selectionStatement)


state 61

   97 selectionStatement: switchStatement .

    $default  reduce using rule 97 (selectionStatement)


state 62

   63 function_arg: type . IDENTIFIER

    IDENTIFIER  shift, and go to state 106


state 63

   58 function_decl: type IDENTIFIER LEFT_PAREN function_args . RIGHT_PAREN

    RIGHT_PAREN  shift, and go to state 107


state 64

   59 function_args: function_arg_list .

    $default  reduce using rule 59 (function_args)


state 65

   61 function_arg_list: function_arg .
   62                  | function_arg . COMMA function_arg_list

    COMMA  shift, and go to state 108

    $default  reduce using rule 61 (function_arg_list)


state 66

   17 array_identifier: IDENTIFIER LEFT_BRACKET INTEGER . RIGHT_BRACKET

    RIGHT_BRACKET  shift, and go to state 109


state 67

   15 var_decl: IDENTIFIER ASSIGN expression .
   18 expression: expression . PLUS expression
   19           | expression . MINUS expression
   20           | expression . MUL expression
   21           | expression . DIV expression
   22           | expression . MOD expression
   24           | expression . LESS expression
   25           | expression . LESS_EQUAL expression
   26           | expression . GREATER expression
   27           | expression . GREATER_EQUAL expression
   28           | expression . AND_AND expression
   29           | expression . OR_OR expression
   31           | expression . EQUAL expression
   32           | expression . NOT_EQUAL expression

    LESS           shift, and go to state 85
    LESS_EQUAL     shift, and go to state 86
    GREATER        shift, and go to state 87
    GREATER_EQUAL  shift, and go to state 88
    PLUS           shift, and go to state 89
    MINUS          shift, and go to state 90
    DIV            shift, and go to state 91
    MOD            shift, and go to state 92
    MUL            shift, and go to state 93
    AND_AND        shift, and go to state 94
    OR_OR          shift, and go to state 95
    EQUAL          shift, and go to state 96
    NOT_EQUAL      shift, and go to state 97

    $default  reduce using rule 15 (var_decl)


state 68

   14 var_decl: IDENTIFIER .
   15         | IDENTIFIER . ASSIGN expression
   17 array_identifier: IDENTIFIER . LEFT_BRACKET INTEGER RIGHT_BRACKET

    LEFT_BRACKET  shift, and go to state 27
    ASSIGN        shift, and go to state 28

    $default  reduce using rule 14 (var_decl)


state 69

   12 var_declaration_list: var_declaration_list COMMA var_decl .

    $default  reduce using rule 12 (var_declaration_list)


state 70

   98 ifStatement: IF LEFT_PAREN . expression RIGHT_PAREN ifBody
   99            | IF LEFT_PAREN . expression RIGHT_PAREN ifBody ELSE elseBody

    IDENTIFIER     shift, and go to state 38
    INTEGER        shift, and go to state 39
    DOUBLE_NUMBER  shift, and go to state 40
    CHARACTER      shift, and go to state 41
    LEFT_PAREN     shift, and go to state 42
    PLUS_PLUS      shift, and go to state 43
    MINUS          shift, and go to state 44
    MINUS_MINUS    shift, and go to state 45
    NOT            shift, and go to state 46

    array_identifier  go to state 48
    expression        go to state 110
    var               go to state 50
    constant          go to state 51
    call              go to state 52


state 71

  104 switchStatement: SWITCH LEFT_PAREN . expression RIGHT_PAREN LEFT_BRACE labeledStatementList RIGHT_BRACE

    IDENTIFIER     shift, and go to state 38
    INTEGER        shift, and go to state 39
    DOUBLE_NUMBER  shift, and go to state 40
    CHARACTER      shift, and go to state 41
    LEFT_PAREN     shift, and go to state 42
    PLUS_PLUS      shift, and go to state 43
    MINUS          shift, and go to state 44
    MINUS_MINUS    shift, and go to state 45
    NOT            shift, and go to state 46

    array_identifier  go to state 48
    expression        go to state 111
    var               go to state 50
    constant          go to state 51
    call              go to state 52


state 72

   82 compoundStatement: LEFT_BRACE . statements RIGHT_BRACE

    IF             shift, and go to state 31
    SWITCH         shift, and go to state 32
    DO             shift, and go to state 33
    WHILE          shift, and go to state 34
    FOR            shift, and go to state 35
    CONTINUE       shift, and go to state 36
    BREAK          shift, and go to state 37
    IDENTIFIER     shift, and go to state 38
    INTEGER        shift, and go to state 39
    DOUBLE_NUMBER  shift, and go to state 40
    CHARACTER      shift, and go to state 41
    LEFT_PAREN     shift, and go to state 42
    PLUS_PLUS      shift, and go to state 43
    MINUS          shift, and go to state 44
    MINUS_MINUS    shift, and go to state 45
    NOT            shift, and go to state 46
    SEMI           shift, and go to state 47

    $default  reduce using rule 69 (statements)

    array_identifier     go to state 48
    expression           go to state 49
    var                  go to state 50
    constant             go to state 51
    call                 go to state 52
    statements           go to state 112
    statement            go to state 55
    expressionStatement  go to state 56
    iterationStatement   go to state 57
    jumpStatement        go to state 58
    selectionStatement   go to state 59
    ifStatement          go to state 60
    switchStatement      go to state 61


state 73

   77 iterationStatement: DO compoundStatement . WHILE LEFT_PAREN expression RIGHT_PAREN SEMI

    WHILE  shift, and go to state 113


state 74

   76 iterationStatement: WHILE LEFT_PAREN . expression RIGHT_PAREN loopBody

    IDENTIFIER     shift, and go to state 38
    INTEGER        shift, and go to state 39
    DOUBLE_NUMBER  shift, and go to state 40
    CHARACTER      shift, and go to state 41
    LEFT_PAREN     shift, and go to state 42
    PLUS_PLUS      shift, and go to state 43
    MINUS          shift, and go to state 44
    MINUS_MINUS    shift, and go to state 45
    NOT            shift, and go to state 46

    array_identifier  go to state 48
    expression        go to state 114
    var               go to state 50
    constant          go to state 51
    call              go to state 52


state 75

   78 iterationStatement: FOR LEFT_PAREN . forCondition RIGHT_PAREN loopBody

    INT            shift, and go to state 1
    LONG           shift, and go to state 2
    FLOAT          shift, and go to state 3
    SHORT          shift, and go to state 4
    VOID           shift, and go to state 5
    DOUBLE         shift, and go to state 6
    CHAR           shift, and go to state 7
    IDENTIFIER     shift, and go to state 38
    INTEGER        shift, and go to state 39
    DOUBLE_NUMBER  shift, and go to state 40
    CHARACTER      shift, and go to state 41
    LEFT_PAREN     shift, and go to state 42
    PLUS_PLUS      shift, and go to state 43
    MINUS          shift, and go to state 44
    MINUS_MINUS    shift, and go to state 45
    NOT            shift, and go to state 46

    $default  reduce using rule 90 (forInitList)

    type              go to state 115
    array_identifier  go to state 48
    expression        go to state 116
    var               go to state 50
    constant          go to state 51
    call              go to state 52
    forCondition      go to state 117
    expressions       go to state 118
    forInitList       go to state 119
    forDeclaration    go to state 120


state 76

   94 jumpStatement: CONTINUE SEMI .

    $default  reduce using rule 94 (jumpStatement)


state 77

   95 jumpStatement: BREAK SEMI .

    $default  reduce using rule 95 (jumpStatement)


state 78

   47 call: IDENTIFIER LEFT_PAREN . args RIGHT_PAREN

    IDENTIFIER     shift, and go to state 38
    INTEGER        shift, and go to state 39
    DOUBLE_NUMBER  shift, and go to state 40
    CHARACTER      shift, and go to state 41
    LEFT_PAREN     shift, and go to state 42
    PLUS_PLUS      shift, and go to state 43
    MINUS          shift, and go to state 44
    MINUS_MINUS    shift, and go to state 45
    NOT            shift, and go to state 46

    $default  reduce using rule 49 (args)

    array_identifier  go to state 48
    expression        go to state 121
    var               go to state 50
    constant          go to state 51
    call              go to state 52
    args              go to state 122
    args_list         go to state 123


state 79

   18 expression: expression . PLUS expression
   19           | expression . MINUS expression
   20           | expression . MUL expression
   21           | expression . DIV expression
   22           | expression . MOD expression
   23           | LEFT_PAREN expression . RIGHT_PAREN
   24           | expression . LESS expression
   25           | expression . LESS_EQUAL expression
   26           | expression . GREATER expression
   27           | expression . GREATER_EQUAL expression
   28           | expression . AND_AND expression
   29           | expression . OR_OR expression
   31           | expression . EQUAL expression
   32           | expression . NOT_EQUAL expression

    RIGHT_PAREN    shift, and go to state 124
    LESS           shift, and go to state 85
    LESS_EQUAL     shift, and go to state 86
    GREATER        shift, and go to state 87
    GREATER_EQUAL  shift, and go to state 88
    PLUS           shift, and go to state 89
    MINUS          shift, and go to state 90
    DIV            shift, and go to state 91
    MOD            shift, and go to state 92
    MUL            shift, and go to state 93
    AND_AND        shift, and go to state 94
    OR_OR          shift, and go to state 95
    EQUAL          shift, and go to state 96
    NOT_EQUAL      shift, and go to state 97


state 80

   17 array_identifier: IDENTIFIER . LEFT_BRACKET INTEGER RIGHT_BRACKET
   42 var: IDENTIFIER .

    LEFT_BRACKET  shift, and go to state 27

    $default  reduce using rule 42 (var)


state 81

   35 expression: PLUS_PLUS var .

    $default  reduce using rule 35 (expression)


state 82

   18 expression: expression . PLUS expression
   19           | expression . MINUS expression
   20           | expression . MUL expression
   21           | expression . DIV expression
   22           | expression . MOD expression
   24           | expression . LESS expression
   25           | expression . LESS_EQUAL expression
   26           | expression . GREATER expression
   27           | expression . GREATER_EQUAL expression
   28           | expression . AND_AND expression
   29           | expression . OR_OR expression
   31           | expression . EQUAL expression
   32           | expression . NOT_EQUAL expression
   33           | MINUS expression .

    LESS           shift, and go to state 85
    LESS_EQUAL     shift, and go to state 86
    GREATER        shift, and go to state 87
    GREATER_EQUAL  shift, and go to state 88
    PLUS           shift, and go to state 89
    DIV            shift, and go to state 91
    MOD            shift, and go to state 92
    MUL            shift, and go to state 93
    AND_AND        shift, and go to state 94
    OR_OR          shift, and go to state 95
    EQUAL          shift, and go to state 96
    NOT_EQUAL      shift, and go to state 97
